Add gulp + sass

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -10,3 +10,19 @@
  * License:     GNU General Public License v2.0 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  */
+
+@import "utilities";
+@import "reset";
+@import "defaults";
+@import "media";
+@import "forms";
+@import "layout";
+@import "header";
+@import "menus";
+@import "content";
+@import "entries";
+@import "sidebars";
+@import "comments";
+@import "footer";
+@import "helpers";
+@import "print";
