Run gulp, compile assets

--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -4,12 +4,9 @@
 
 #container {}
 
-.layout-1c #container {}
-.layout-2c-l #container {}
-.layout-2c-r #container {}
-.layout-3c-l #container {}
-.layout-3c-r #container {}
-.layout-3c-c #container {}
+.full-width    #container {}
+.sidebar-left  #container {}
+.sidebar-right #container {}
 
 #header {}
 
